# sensorium-api

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
authorization/: backends.py  models.py  permissions.py  serializers.py  urls.py  views.py
authorization/migrations/: 0001_initial.py  0002_token.py  0003_rename_code_token_token.py  0004_alter_authcode_table_alter_devicetoken_table_and_more.py  0005_rename_authcode_authcodes_and_more.py  0006_alter_authcodes_is_used.py  0007_alter_authcodes_expiration_date.py  0008_alter_authcodes_expiration_date.py  0009_alter_authcodes_expiration_date_and_more.py  0010_alter_authcodes_expiration_date.py  0011_alter_authcodes_expiration_date.py  0012_alter_authcodes_expiration_date.py  0013_alter_authcodes_add_date.py
control/: models.py  serializers.py  urls.py  views.py
control/migrations/: 0001_initial.py  0002_alter_devices_user_alter_equipment_user_and_more.py  0003_devices_name.py  0004_alter_equipment_name_alter_indicators_equipment_type.py  0005_alter_devices_add_date_alter_devices_update_date_and_more.py  0006_alter_indicators_equipment_type.py  0007_rename_equipment_type_indicators_indicator_type.py
core/: settings.py  urls.py
data/: sensor_reading.py  serializers.py  urls.py  views.py
instructions/: AUTHORIZATION.md
